# plexdlweb

./: .dockerignore  .gitignore  Dockerfile  README.md  __main__.py  common.py  config.py  locales.py  login.py  plex.py  plexdlweb.service  pyproject.toml  requirements.txt
.github/: FUNDING.yml
locales/: en.json  es.json  fr.json
